# papermc-updater

./: README.md  pyproject.toml
.github/workflows/: publish_to_pypi.yml
papermc_updater/: __init__.py  update_paper.py
